--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
 joblib==1.4.2
 numpy==2.3.2
 pandas==2.3.1
-plotly==6.0.1
-plotly==6.2.0
-plotly==5.22.0
-plotly==6.1.2
+plotly
 PyMySQL==1.1.1
 python-dotenv==1.1.1
 python_bcrypt==0.3.2
@@ -14,3 +11,4 @@ streamlit==1.43.2
 streamlit==1.46.1
 streamlit==1.32.0
 streamlit==1.45.1
+
