--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
 joblib==1.4.2
 numpy==2.3.2
 pandas==2.3.1
-plotly
+plotly==6.2.0
 PyMySQL==1.1.1
 python-dotenv==1.1.1
-python_bcrypt==0.3.2
-scikit_learn==1.4.2
-scipy==1.16.1
-streamlit==1.43.2
+bcrypt==4.1.2
+scikit-learn==1.4.2
+scipy==1.13.0
 streamlit==1.46.1
-streamlit==1.32.0
-streamlit==1.45.1
-
